# oop_exercise_07

./: CMakeLists.txt  Document.cpp  Document.h  README.md  Redactor.cpp  Redactor.h  main.cpp
